Fix navbar to top and not part of scrollbar

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -16,9 +16,6 @@ html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
-body {
-  margin: 0;
-}
 article,
 aside,
 details,
@@ -280,7 +277,8 @@ th {
 }
 html {
   font-size: 10px;
-
+  width: 100%;
+  height: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
@@ -289,6 +287,11 @@ body {
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 input,
 button,
