--- a/less/site.less
+++ b/less/site.less
@@ -81,6 +81,10 @@
   }
 }
 
+main {
+  overflow-y: auto;
+}
+
 /*! normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */
 html {
   line-height: 1.15;
@@ -1750,7 +1754,6 @@ img.lazy.scroll-watch-in-view {
 
 .container-fluid {
   margin: 0 auto;
-  max-width: 112.5em
 }
 
 .container-fluid::after {
